--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <input type="text" id="cpf" name="cpf">
             </div>
             <div class="form-campo">
-                <label for="endereco">Endereço completo</label>
+                <label for="endereco">Endereço completo:</label>
                 <input type="text" id="endereco" name="endereco">
             </div>
             <div class="form-campo">
